<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/coloWhite"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/title_login"
                    android:textColor="@color/coloWhite"
                    android:textSize="32sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="40dp"
                app:cardBackgroundColor="@color/coloWhite"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="32dp">

                    <TextView
                        android:id="@+id/userTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/name_user"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/userEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/userTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="-4dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="@string/name_user"
                        android:background="@drawable/ic_field"
                        android:ems="80"
                        android:hint="@string/name_user"
                        android:inputType="textAutoComplete"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/passTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/userEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="25dp"
                        android:text="@string/name_password"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/passEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/passTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="25dp"
                        android:autofillHints="@string/name_password"
                        android:background="@drawable/ic_field"
                        android:ems="3"
                        android:hint="@string/name_password"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="240dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/passEditText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/ic_btn"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/coloWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/forgotTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loginButton"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="25dp"
                        android:text="@string/forgot_password"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlue"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="240dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/forgotTextView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/ic_btn"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/coloWhite"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>